examples/base/mesh-color/color-app-mesh-blue.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color-blue
  namespace: default
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: color
    version: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: blue
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/mesh: default-mesh
      labels:
        app: color
        version: blue
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: app
          image: "vivekgoyal/colorapp"
          ports:
            - containerPort: 9080
---
