examples/base/mesh-color/color-app-mesh-green.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color-green
  namespace: default
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: color
    version: green
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: green
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/mesh: default-mesh
      labels:
        app: color
        version: green
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: app
          image: "672518094988.dkr.ecr.us-west-2.amazonaws.com/hello-world:v1.0"
          ports:
            - containerPort: 9080
---
