examples/base/mesh-color/color-app-mesh-red.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color-red
  namespace: default
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: color
    version: red
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: red
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: red
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/mesh: default-mesh
      labels:
        app: color
        version: red
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: app
          image: "${appmesh_color_demo_image}"
          ports:
            - containerPort: 9080
---
