examples/base/mesh-color/color-app-mesh-white.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color-white
  namespace: default
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: color
    version: white
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: white
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: white
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/mesh: default-mesh
      labels:
        app: color
        version: white
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: app
          image: "${appmesh_color_demo_image}"
          ports:
            - containerPort: 9080
---
