examples/base/mesh-color/color-app-mesh-yellow.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: color-yellow
  namespace: ${ks_namespace}
spec:
  ports:
    - port: 9080
      name: http
  selector:
    app: color
    version: yellow
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yellow
  namespace: ${ks_namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: color
      version: yellow
  template:
    metadata:
      annotations:
        appmesh.k8s.aws/mesh: ${ks_namespace}-mesh
      labels:
        app: color
        version: yellow
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: app
          image: "${appmesh_color_demo_image}"
          ports:
            - containerPort: 9080
---
