examples/base/mesh-color/color-app-mesh-vgw.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color-headers
  namespace: ${example_namespace}
spec:
  awsName: color-headers.${example_namespace}.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color-headers
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: color-paths
  namespace: ${example_namespace}
spec:
  awsName: color-paths.${example_namespace}.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: color-paths
---
apiVersion: v1
kind: Service
metadata:
  name: color-headers
  namespace: ${example_namespace}
spec:
  ports:
    - port: 9080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: color-paths
  namespace: ${example_namespace}
spec:
  ports:
    - port: 9080
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-gw
  namespace: ${example_namespace}
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "external"
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: "ip"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8088
      name: http
  selector:
    app: ingress-gw
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-gw
  namespace: ${example_namespace}
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-gw
  template:
    metadata:
      labels:
        app: ingress-gw
    spec:
      serviceAccount: appmesh-pod
      containers:
        - name: envoy
          image: "840364872350.dkr.ecr.us-west-2.amazonaws.com/aws-appmesh-envoy:v1.19.1.0-prod"
          ports:
            - containerPort: 8088
